# ai-charactermancer

./: .gitignore  agent_utils.py  docker-compose.yml  main.py  models.py  pyproject.toml
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent/src/ai_charactermancer/: config.py  graph.py  main.py  models.py  rag.py  validation.py
agents/attributes/: __init__.py
agents/classes/: __init__.py  class_list.md  rogue.md
agents/feats/: __init__.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/character_backend/: config.py  main.py  models.py
backend/src/character_backend/auth/: jwt.py
backend/src/character_backend/db/: character_repo.py  client.py  content_repo.py
backend/src/character_backend/routers/: characters.py  content.py
docs/architecture/: arc42.md
frontend/: .env.example  Dockerfile  bun-env.d.ts  index.html  package.json  playwright.config.ts  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.html  index.ts
frontend/src/api/: client.ts
frontend/src/components/: CharacterOverview.tsx  NavBar.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/character/: CharacterSheet.tsx
frontend/src/components/sidekick/: ChatMessage.tsx  SidekickPanel.tsx  a2uiCatalog.tsx  useSidekick.ts
frontend/src/components/wizard/: WizardShell.tsx
frontend/src/components/wizard/steps/: AttributesStep.tsx  ClassStep.tsx  EquipmentStep.tsx  FeatsStep.tsx  RaceStep.tsx  SkillsStep.tsx  SummaryStep.tsx  TraitsStep.tsx
frontend/src/pages/: CharacterOverview.tsx  FeatBrowser.tsx
frontend/src/pages/wizard/: StepRegistry.ts  WizardShell.tsx
frontend/src/pages/wizard/steps/: BasicInfoStep.tsx  ClassStep.tsx  SummaryStep.tsx
frontend/src/store/: characterStore.ts
frontend/src/theme/: theme.ts
ingestion/: .env.example  Dockerfile  pyproject.toml
ingestion/src/pf1_ingestion/: config.py  embedder.py  main.py  mongo_loader.py
ingestion/src/pf1_ingestion/parsers/: class_abilities.py  classes.py  common.py  feats.py  items.py  races.py  racial_traits.py  spells.py  traits.py
src/ai_charactermancer/: agent_utils.py  main.py  models.py  tools.py
src/ai_charactermancer/agents/: supervisor.py
src/ai_charactermancer/agents/attributes/: __init__.py
src/ai_charactermancer/agents/classes/: __init__.py
src/ai_charactermancer/agents/feats/: __init__.py  feat_taxes.md  graph_manipulation.py
