[project]
name = "ai-charactermancer"
version = "0.1.0"
description = "A project for AI-powered character creation."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "langgraph",
    "google-genai",
    "langchain-google-genai",
    "loguru",
    "dotenv",
    "networkx",
    "chainlit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true